--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
               <%= link_to "Çıkış Yap", destroy_user_session_path, :method => :delete %>
             <% else %>
               <%= link_to image_tag("facebook.png"), user_omniauth_authorize_path(:facebook) %>
+              <%= link_to image_tag("twitter.png"), user_omniauth_authorize_path(:twitter) %>
             <% end %>
           </div>
         </div>
