--- a/app/assets/stylesheets/loans.css.scss
+++ b/app/assets/stylesheets/loans.css.scss
@@ -1,3 +1,5 @@
 // Place all the styles related to the Loans controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#payment_box { width: 500px; border: 1px black solid; background-color: #eee; padding: 10px; }
+.payment p { width: 100px; float:left; }
