--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,10 +50,10 @@
 
     <div class="container">
   <% if flash[:alert] %>
-    <p class="error"><%= flash[:alert] %></p>
+    <p id="error"><%= flash[:alert] %></p>
   <% end %>
   <% if flash[:notice] %>
-    <p class="notice"><%= flash[:notice] %></p>
+    <p id="notice"><%= flash[:notice] %></p>
   <% end %>
 
       <%= yield %>
