added mail support when creating payment plan

--- a/app/views/borrowers/_form.html.erb
+++ b/app/views/borrowers/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
+  </div>
+  <div class="field">
     <%= f.label :facebook_name %><br />
     <%= f.text_field :facebook_name %>
   </div>
