--- a/app/views/borrowers/show.html.erb
+++ b/app/views/borrowers/show.html.erb
@@ -1,8 +1,11 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Name:</b>
   <%= @borrower.name %>
+</p>
+
+<p>
+  <b>Email:</b>
+  <%= @borrower.email %>
 </p>
 
 <p>
